# Matrix

./: CMakeLists.txt  README.md  main.cpp
BigInteger/: BigInteger.h
Finite/: Finite.cpp
Matrix/: Matrix.h  SquareMatrix.cpp  SquareMatrix.h
Rational/: Rational.h
src/BigInteger/: BigInteger.cpp  BigInteger.h
src/Finite/: Finite.h  Finite.hpp
src/Matrix/: Matrix.hpp  SquareMatrix.hpp
src/Rational/: Rational.cpp  Rational.h
tests/: big_matrix.txt  matrix_test.cpp
